# coverage-occlusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bgfx.cmake  fs_fullscreen.sc  fs_occlusion.sc  makefile  occlusion.cpp  rasterizer.cpp  rasterizer.h  rasterizer_box.cpp  rasterizer_draw.cpp  rasterizer_math.h  rasterizer_math_neon.inl  rasterizer_math_sse.inl  rasterizer_sort.cpp  rasterizer_tile.cpp  rasterizer_tile.h  setup.sh  varying.def.sc  vs_fullscreen.sc  vs_occlusion.sc
.github/workflows/: cmake.yml
scripts/: genie.lua
